--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -5,12 +5,12 @@
             "label": "C/C++: clang build active file",
             "command": "/usr/bin/clang",
             "args": [
-                "-fcolor-diagnostics",
-                "-fansi-escape-codes",
+                "-fsanitize=leak",
                 "-g",
                 "${file}",
                 "-o",
-                "${fileDirname}/${fileBasenameNoExtension}"
+                "${fileDirname}/${fileBasenameNoExtension}.exe",
+                "-v"
             ],
             "options": {
                 "cwd": "${fileDirname}"
